# SerpentariumCore

./: .coverage-tmp.html  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  tests.yml
docs/: 404.html  index.html  index.md  sitemap.xml
docs/assets/javascripts/: bundle.3220b9d7.min.js
docs/assets/stylesheets/: main.66ac8b77.min.css  main.66ac8b77.min.css.map
docs/docs/: index.html
docs/search/: search_index.json
docs/serpentariumcore/: __about__.py  service_container.py  utils.py
search/: search_index.json
src/docs/: index.md
src/serpentariumcore/: __about__.py  __init__.py  service_container.py  utils.py
tests/: test_multiservice_registration.py  test_resolving.py  test_service_container.py  test_service_registrator.py  test_sub_import_problem.py
tests/mod1/: __init__.py
